# SpGEMM-Baselines

./: README.md
CSeg/: main  run_benchmark.sh
GraphBLAS/: CMakeLists.txt  run_benchmark.sh
HASpGEMM/: Makefile  info  run_benchmark.sh  run_benchmark_maxmem.sh
HASpGEMM/include/: Check_d_csrmultcsr.h  Check_d_utils.h  HASpGEMM.h  Test_HASpGEMM.h  biio.h  common.h  mmio.h  until.h
HASpGEMM/src/: main.c  sample_info.c
SpGEMM-exp/: README.md
SpGEMM-exp/clusterwise-spgemm-main/: .gitignore  BIN.h  BIN_FlengthCluster.h  BIN_VlengthCluster.h  CSC.h  CSR.h  CSR_FlengthCluster.h  CSR_VlengthCluster.h  IO.h  README.md  cluster_utility.h  hash_mult.h  hash_mult_flengthcluster.h  hash_mult_vlengthcluster.h  makefile  multiply.h  resGP.txt  resHP.txt  utility.h
SpGEMM-exp/reordering-spgemm/: .gitignore  README.md
SpGEMM-exp/reordering-spgemm/SparseBase/examples/: CMakeLists.txt
SpGEMM-exp/reordering-spgemm/SparseBase/examples/amd_order/: amd_order.cc  amd_order_BK.cc
SpGEMM-exp/reordering-spgemm/SparseBase/examples/degree_order/: CMakeLists.txt  degree_order_mtx.cc
SpGEMM-exp/reordering-spgemm/SparseBase/examples/gray_order/: CMakeLists.txt  gray_order.cc  gray_order_el.cc
SpGEMM-exp/reordering-spgemm/SparseBase/examples/rcm_order/: CMakeLists.txt  rcm_order_mtx.cc
SpGEMM-exp/reordering-spgemm/SparseBase/examples/slashburn_order/: CMakeLists.txt  slashburn_order.cc
aocl-sparse-5.2.2/: run_aoclspgemm.sh  run_aoclspgemm_maxmem.sh
aocl-sparse-5.2.2/build-amd-gcc/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  compile_commands.json  install_manifest.txt
kokkos/: CMakeCache.txt
kokkos-kernels/: AMD_600results0402.txt  CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  KokkosKernelsConfig.cmake  KokkosKernels_config.h  Makefile  SPGEMM_TEST_README.md  cmake_install.cmake  run_spgemm_benchmark.sh
kokkos-kernels/perf_test/: CTestTestfile.cmake  Makefile  (+1 more)
(+626 files in other folders)
